# pyrustic

./: .gitignore  CONTRIBUTING  LICENSE  MANIFEST.in  README.md  README.txt  about.py  backstage.tasks  install.py  main.py  scratch.py  setup.cfg  setup.py  tREADME.md  what_is_pyrustic_framework.txt
.pyrustic/backstage/: build_report.json
.pyrustic/buildver/: build_report
.pyrustic_data/: about.json
.pyrustic_data/hub/: package_exclusion.txt  publishing.json
common/: constants.py  funcs.py
common/default_json_data/: default_about.json  default_build.json  default_manager_shared_data.json  default_publishing.json  default_publishing_form.json
core/: pyrushell.py
core/handler/: dao_handler.py  feed_handler.py  host_handler.py  import_handler.py  make_handler.py  misc_handler.py  package_handler.py  switch_handler.py  sync_handler.py  target_handler.py  tutorial_handler.py  version_handler.py  view_handler.py
core/misc/: dhvm_handler.py  funcs.py
core/payload/: LICENSE  README.txt  about.py  main.py  runtest.py
core/template/: dao_template.py  host_template.py  test_template.py  view_template.py
docs/: GUIDE.md  REFERENCE.md  TUTORIAL.md
docs/faq/: README.md
docs/guide/: README.md
docs/modules/: README.md
docs/reference/: README.md
docs/tutorial/: README.md  tutorial-1.md  tutorial-2.md
handler/: add_handler.py  dbase_handler.py  demo_handler.py  run_handler.py  target_handler.py  test_handler.py  tutorial_handler.py  version_handler.py
hub/: config.json  main.py  notes.txt
hub/host/: main_host.py  publishing_host.py  test_host.py
hub/view/: auth_view.py  central_view.py  failure_view.py  footer_view.py  header_view.py  main_view.py  publishing_view.py  tree_view.py
manager/handler/: add_handler.py  build_handler.py  hub_handler.py  kstart_handler.py  last_handler.py  link_handler.py  relink_handler.py  run_handler.py  sql_handler.py  sync_handler.py  target_handler.py  test_handler.py  unlink_handler.py  update_handler.py  version_handler.py
manager/misc/: funcs.py  update_reminder.py
manager/template/: about_template.txt  build_act_1_template.txt  build_epilog_template.txt  build_prolog_template.txt  kstart_main_host_template.txt  kstart_main_template.txt  kstart_main_view_template.txt  kstart_my_theme_template.txt  kstart_test_main_host_template.txt  module_template.txt  package_exclusion_template.txt  publishing_epilog_template.txt  publishing_prolog_template.txt  scratch_template.txt  view_template.txt
misc/: constants.py  demo  funcs.py  tutorial_catalog.py
pyrustic/: .private  __init__.py  __main__.py  about.py  app.py  com.py  dao.py  default_style.py  exception.py  gurl.py  hello.py  jasonix.py  litedao.py  pymisc.py  theme.py  threadium.py  threadom.py  tkmisc.py  view.py  viewable.py
pyrustic/abstract/: viewable.py
pyrustic/hooking/: ante_build_hook.py  ante_release_hook.py  post_build_hook.py  post_release_hook.py
pyrustic/manager/: __init__.py  cmdline.py  constant.py  hubway.py  install.py  main.py  oneline.py  private
pyrustic/private/: default_app_config.json  enhance_tk.py  tk_frame_public_and_protected_attributes.txt  tk_toplevel_public_and_protected_attributes.txt
pyrustic/pyrustic_data/: about.json  app.json  build_report.json  hooking.json  release_info.json
pyrustic/themes/: darkmatter.py
pyrustic/widget/: __init__.py  choice.py  confirm.py  dialog.py  pathentry.py  scrollbox.py  spinner.py  table.py  toast.py  tree.py
pyrustic_data/: about.json  build.json  build_exclusion.txt
pyrustic_data/hub/: publishing.json
runtest/: main.py
runtest/host/: main_host.py
script/: build_act_2.py  publishing_epilog.py  publishing_prolog.py
sqleditor/: main.py
template/: config.ini  dao_template.py  host_template.py  main.py  module_template.py  script.py  test_template.py  view_template.py
tests/: __main__.py  test_autumn.py  test_skeleton.py
(+247 files in other folders)
