[metadata]
name = pyrustic
version = file: VERSION
url = https://github.com/pyrustic/pyrustic
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Collection of lightweight Python projects that share the same policy
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    framework
    software-suite
    desktop-application
    tkinter
    ecosystem
    sqlite
    json
    graphical
    fetching-resources
    database-access-object
    theme
    dark-theme
    packaging
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    tkf
    shared
    gaspium
    tkstyle
    cyberpunk-theme
    winter-theme
    litemark
    backstage
    megawidget
    viewable
    threadom
    codegame
    suggestion
    kurl
    litedao
    probed
    hubstore
    jupitest
    rustiql

[options.entry_points]
console_scripts =
    pyrustic = pyrustic.__main__:main
